2007-10-29  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.1.20071029-cvs.

2007-10-29  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.7.1 released.

2007-10-29  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.1.

2007-10-29  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.7.1.

2007-10-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* memory-map.c (parse_memory_map): Don't use an empty struct
	initializer.

2007-10-25  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Document status of hppa64-hpux support.

2007-10-24  Pedro Alves  <pedro_alves@portugalmail.pt>

	PR gdb/2341
	* sol-thread.c (sol_thread_fetch_registers): Work around gcc 3.4
	alias warning bug.

2007-10-23  Daniel Jacobowitz  <dan@codesourcery.com>

	PR gdb/2336
	* configure.ac: Modify $LIBINTL before the BFD check.
	* configure: Regenerated.

2007-10-21  Luis Machado  <luisgpm@br.ibm.com>

	* rs6000-tdep.c (ppc_dwarf2_frame_init_reg): New function.
	* (rs6000_gdbarch_init): Install ppc_dwarf2_frame_init_reg as
	default dwarf2_frame_set_init_reg function.
		
2007-10-16  Daniel Jacobowitz  <dan@codesourcery.com>

	* mi/mi-main.c (captured_mi_execute_command): Clear mi_error_message
	after freeing it.

2007-10-13  Joel Brobecker  <brobecker@adacore.com>

	* solib-target.c (solib_target_parse_libraries)
	[HAVEHAVE_LIBEXPAT not defined]: Fix thinko in return type.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.0.20071010-cvs.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.7 released.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.

2007-10-10  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.7.

2007-10-09  Daniel Jacobowitz  <dan@codesourcery.com>

	* solib-svr4.c (enable_break): Add the dynamic linker also if
	auxv succeeds.

2007-10-08  Pedro Alves  <pedro_alves@portugalmail.pt>
